finishing almost everything :P

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,7 +6,22 @@
       <a class="nav-link {% if page == 'caesar-cipher'%} active {% endif %}" href="/caesar-cipher">Caesar-cipher</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/monoalphabetic-cipher">Monoalphabetic Cipher</a>
+      <a class="nav-link {% if page == 'monoalphabetic-cipher'%} active {% endif %}" href="/monoalphabetic-cipher">Monoalphabetic Cipher</a>
     </li>
 
+    <li class="nav-item">
+      <a class="nav-link {% if page == 'polyalphabetic-cipher'%} active {% endif %}" href="/polyalphabetic-cipher">Polyalphabetic Cipher</a>
+    </li>
+
+    <li class="nav-item">
+      <a class="nav-link {% if page == 'vigenère-cipher'%} active {% endif %}" href="/vigenère-cipher">Vigenère Cipher</a>
+    </li>
+
+    <li class="nav-item">
+      <a class="nav-link {% if page == 'playfair-cipher'%} active {% endif %}" href="/playfair-cipher">Playfair Cipher</a>
+    </li>
+
+    <li class="nav-item">
+      <a class="nav-link {% if page == 'rail-fence-cipher'%} active {% endif %}" href="/rail-fence-cipher">Rail Fence Cipher</a>
+    </li>
   </ul>
