--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -24,4 +24,8 @@
     <li class="nav-item">
       <a class="nav-link {% if page == 'rail-fence-cipher'%} active {% endif %}" href="/rail-fence-cipher">Rail Fence Cipher</a>
     </li>
+
+    <li class="nav-item">
+      <a class="nav-link {% if page == 'row-transposition-cipher'%} active {% endif %}" href="/row-transposition-cipher">Row Transposition Cipher</a>
+    </li>
   </ul>
